# AMDGPUQuerer

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt  mainAMDGPUQuerer.cpp
